# xsw

./: .deploy  .dockerignore  .env  .env_example  .gitignore  ADMIN_PANEL.md  BACKGROUND_JOBS.md  CHANGELOG_2026-02-01.md  CLAUDE.md  DEPLOYMENT_ISSUE_ZSCALER.md  FEATURE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MIDNIGHT_SYNC.md  MIGRATION_GUIDE.md  PHASE2_IMPROVEMENTS.md  README.md  README.md.old  SEARCH_API.md  SESSION_FIXES_SUMMARY.md  SQLITE_BATCH_FIX.md  TWO_PHASE_LOADING.md  UNFINISHED_BOOKS_FLOW.md  UNFINISHED_BOOKS_SYNC.md  analytics.py  auth.py  background_jobs.py  bot_protection.py  bus_api.py  bus_cache.py  bus_transformer.py  cache_manager.py  classify_puzzles.py  compose.yml  db_models.py  db_utils.py  difficulty_levels.json  email_sender.py  exception_middleware.py  exception_notifier.py  exception_singleton.py  (+25 more)
.devcontainer/: CHANGES_2026-02-02.md  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  devcontainer.json
.devcontainer/library-scripts/: install.sh  (+1 more)
docker/: Dockerfile  Dockerfile.web  build.yml  default.conf
docs/: 433_qqq_qld_sil-00662_00670L_00865B.md  BUS_API_DESIGN.md  BUS_API_SUMMARY.md  BUS_API_USAGE.md  BUS_BUNDLE_QUICKSTART.md  BUS_BUNDLE_RATE_LIMITS.md  BUS_BUNDLE_SCHEDULING.md  BUS_OTA_GUIDE.md  DDOS_ARCHITECTURE.txt  DDOS_INTEGRATION.md  DDOS_PROTECTION.md  DEPLOYMENT_ISSUE_ZSCALER.md  FRONTEND_IMPROVEMENTS.md  GITHUB_ACTIONS.md  GOOGLE_SSO_SETUP.md  OCTILE_API.md  ROUTING_ARCHITECTURE.md  ROUTING_FIX.md  RUNTIME_BASE_PATH.md  SESSION_FIXES_SUMMARY.md  SPA_SERVING.md  SPA_SERVING_ARCHITECTURE.md  SQLITE_BATCH_FIX.md  SYNC_PLAN.md  SYNC_TROUBLESHOOTING.md  TW_TO_CN_CONVERSION.md  ZSCALER_FIX_SUMMARY.md  architecture.md  line_google_apple.md  puzzle-ordering-v2.md  puzzlepack.md  simbridge_hld.md
public/: config.json  config.root.json  config.spa.json  manifest.webapp  opc.pem
scripts/: README.md  analyze_puzzles.py  backup_octile.py  drop_legacy_data.py  generate-keypair.py  generate-minipack.py  generate-pack.py  generate_bus_bundle.py  merge_bus_bundles.py  reorder_puzzles.py  reset_admin_password.py  setup_bundle_cron.sh  setup_multiday_cron.sh  sync_cate.sh  sync_categories.sh  sync_chaps.sh  sync_chapters_enhanced.sh  sync_content.sh  sync_content_enhanced.sh  sync_full.sh  sync_unfinished.sh  test_ddos_protection.py
tests/: conftest.py  html_fixtures.py  test_analytics.py  test_api.py  test_cache.py  test_comments_api.py  test_exception_notifier.py  test_octile_api.py  test_parser.py  test_progress_api.py  test_user_auth.py
(+52 files in other folders)
