[project]
name = "xsw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "curl-cffi>=0.7.0",
    "fastapi>=0.115.0",
    "google-auth>=2.28.0",
    "httpx>=0.27",
    "lxml==6.0.2",
    "opencc-python-reimplemented>=0.1.7",
    "passlib>=1.7.4",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "pytest>=8.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "ruff==0.14.14",
    "sqlalchemy>=2.0.0",
    "urllib3>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

